--- a/package.json
+++ b/package.json
@@ -4,12 +4,17 @@
   "private": true,
   "homepage": "https://sibeliusy.github.io/ai-daw/",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.27",
+    "@fortawesome/free-solid-svg-icons": "^5.12.1",
+    "@fortawesome/react-fontawesome": "^0.1.8",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.3.0"
+    "react-scripts": "3.3.0",
+    "react-scroll-sync": "^0.7.1",
+    "tone": "^13.8.25"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -35,6 +40,6 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^2.1.1"
+    "gh-pages": "^2.2.0"
   }
 }
